Spacing correction

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@
 
     .input {
       display: flex;
-      margin: 10px 0px 30px 0px;
+      margin: 10px 0px;
     }
 
     .input>div {
@@ -75,7 +75,8 @@
     #error {
       width: 100%;
       color: red;
-      margin-top: 0;
+      margin-top: 0px;
+      margin-bottom: 20px;
       text-align: center;
     }
 
